# SlimeVR-Rust

firmware/: Cargo.toml  Embed.toml  build.rs
firmware/.cargo/: config.toml
firmware/src/: main.rs
