[workspace]
resolver = "2"
members = ["crates/panic_defmt", "crates/defmt_esp_println"]

[profile.dev]
# Flashing takes significantly longer than lto
# note: for some reason setting this to `true` causes riscv-rt to appear as two 
# incompatible versions!!?
lto = "thin"


[workspace.package]
license = "MIT OR Apache-2.0"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
repository = "https://github.com/SlimeVR/SlimeVR-Rust"

edition = "2021"
rust-version = "1.65"

[workspace.dependencies]
esp-println = { version = "0.3", default-features = false, features = [
  "critical-section", # Necessary because otherwise I'm very sus of the soundness
] }


[package]
name = "firmware"
version = "0.0.0"

license.workspace = true
authors.workspace = true
repository.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
embassy-nrf = { default-features = false, git = "https://github.com/embassy-rs/embassy", rev = "2528f451387e6c7b27c3140cd87d47521d1971a2", features = [
  "nrf52840",
  "time-driver-rtc1",
] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"


# Embassy stuff
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "2528f451387e6c7b27c3140cd87d47521d1971a2", features = [
  #"integrated-timers",
  "nightly",
] }
embassy-time = { version = "0.1.0", features = [
  # "tick-hz-16_000_000",
  # "unstable-traits",
] }

# Platform independent traits
embedded-hal = "0.2"

# Logging
defmt = "0.3"
defmt-rtt = { version = "0.4" }

panic-halt = "0.2"

[patch.crates-io]
# Emable use of `atomic-polyfill`
defmt = { git = "https://github.com/TheButlah/defmt", rev = "b5d5e316ea56250dcb25b3549bcf4bfdb1687796" }
defmt-rtt = { git = "https://github.com/TheButlah/defmt", rev = "b5d5e316ea56250dcb25b3549bcf4bfdb1687796" }
